@@ -219,8 +219,8 @@
             </proof>
         </theorem>
         <p>Our next theorem could be called <q>cancellation</q>, since it will make that possible.  Though you will never see us drawing slashes through parts of products.  We will also make very limited use of this result, or its vector space counterpart, <xref ref="theorem-SMEZV" acro="SMEZV"/>.</p>
-        <theorem xml:id="theorem-ZPZT" acro="ZPZT">
-            <title>Zero Product, Zero Terms</title>
+        <theorem xml:id="theorem-ZPZF" acro="ZPZF">
+            <title>Zero Product, Zero Factors</title>
             <idx>
                 <h>complex numbers</h>
                 <h>zero product</h>
