@@ -76,7 +76,7 @@
                             <xref ref="property-Z" acro="Z"/></mrow>
                         </md>
                     </p>
-                    <p>This equation is a relation of linear dependence on the set <m>\set{\vectorlist{x}{k-1}}</m>, which is a linearly independent set by the induction hypothesis.  So the scalars must all be zero by <xref ref="definition-LI"/>.  That is, <m>a_i\left(\lambda_i-\lambda_k\right)=0</m> for <m>1\leq i\leq k-1</m>.  However, we have the hypothesis that the eigenvalues are distinct, so <m>\lambda_i-\lambda_k\neq 0</m> for <m>1\leq i\leq k-1</m>.  So <xref ref="theorem-ZPZT" acro="ZPZT"/> implies <m>a_i=0</m> for <m>1\leq i\leq k-1</m>.</p>
+                    <p>This equation is a relation of linear dependence on the set <m>\set{\vectorlist{x}{k-1}}</m>, which is a linearly independent set by the induction hypothesis.  So the scalars must all be zero by <xref ref="definition-LI"/>.  That is, <m>a_i\left(\lambda_i-\lambda_k\right)=0</m> for <m>1\leq i\leq k-1</m>.  However, we have the hypothesis that the eigenvalues are distinct, so <m>\lambda_i-\lambda_k\neq 0</m> for <m>1\leq i\leq k-1</m>.  So <xref ref="theorem-ZPZF" acro="ZPZF"/> implies <m>a_i=0</m> for <m>1\leq i\leq k-1</m>.</p>
                     <p>This reduces the original relation of linear dependence on <m>\set{\vectorlist{x}{k}}</m> to the simpler equation <m>a_k\vect{x}_k=\zerovector</m>.  By <xref ref="theorem-SMEZV" acro="SMEZV"/> we conclude that <m>a_k=0</m> or <m>\vect{x}_k=\zerovector</m>.  Eigenvectors are never the zero vector (<xref ref="definition-EEM" acro="EEM"/>), so <m>a_k=0</m>.  Now all of the scalars <m>a_i</m>, <m>1\leq i\leq k</m> are zero, and so the <em>only</em> relation of linear dependence on the set <m>\set{\vectorlist{x}{k}}</m> is trivial.  So by <xref ref="definition-LI"/>, the set <m>\set{\vectorlist{x}{k}}</m> is linearly independent.</p>
                 </case>
             </proof>
@@ -544,7 +544,7 @@
                         <xref ref="theorem-HMIP" acro="HMIP"/></mrow>
                     <mrow>&amp;=0</mrow>
                 </md>.</p>
-                <p>Since <m>\vect{x}\neq\zerovector</m>, by <xref ref="theorem-PIP" acro="PIP"/> we know <m>\innerproduct{\vect{x}}{\vect{x}}\neq 0</m>.  Then by <xref ref="theorem-ZPZT" acro="ZPZT"/>, <m>\lambda - \conjugate{\lambda}=0</m>, and so <m>\lambda = \conjugate{\lambda}</m>.  If a complex number is equal to its conjugate, then it has a complex part equal to zero, and therefore is a real number.</p>
+                <p>Since <m>\vect{x}\neq\zerovector</m>, by <xref ref="theorem-PIP" acro="PIP"/> we know <m>\innerproduct{\vect{x}}{\vect{x}}\neq 0</m>.  Then by <xref ref="theorem-ZPZF" acro="ZPZF"/>, <m>\lambda - \conjugate{\lambda}=0</m>, and so <m>\lambda = \conjugate{\lambda}</m>.  If a complex number is equal to its conjugate, then it has a complex part equal to zero, and therefore is a real number.</p>
             </proof>
         </theorem>
         <p>Notice the key step of this proof is the ability to pitch a Hermitian matrix from one side of the inner product to the other.</p>
@@ -575,7 +575,7 @@
                         <xref ref="theorem-HMIP" acro="HMIP"/></mrow>
                     <mrow>&amp;=0</mrow>
                 </md>.</p>
-                <p>Because <m>\lambda</m> and <m>\rho</m> are presumed to be different, <m>\lambda-\rho\neq 0</m>, and <xref ref="theorem-ZPZT" acro="ZPZT"/> implies that <m>\innerproduct{\vect{x}}{\vect{y}}=0</m>.  In other words, <m>\vect{x}</m> and <m>\vect{y}</m> are orthogonal vectors according to <xref ref="definition-OV" acro="OV"/>.</p>
+                <p>Because <m>\lambda</m> and <m>\rho</m> are presumed to be different, <m>\lambda-\rho\neq 0</m>, and <xref ref="theorem-ZPZF" acro="ZPZF"/> implies that <m>\innerproduct{\vect{x}}{\vect{y}}=0</m>.  In other words, <m>\vect{x}</m> and <m>\vect{y}</m> are orthogonal vectors according to <xref ref="definition-OV" acro="OV"/>.</p>
             </proof>
         </theorem>
         <p>Notice again how the key step in this proof is the fundamental property of a Hermitian matrix (<xref ref="theorem-HMIP" acro="HMIP"/>) <mdash/> the ability to swap <m>A</m> across the two arguments of the inner product.  Notice too, that we can always apply the Gram-Schmidt procedure (<xref ref="theorem-GSP" acro="GSP"/>) to any basis of any eigenspace, along with scaling the resulting the orthogonal vectors by their norm to arrive at an orthonormal basis of the eigenspace.  For a Hermitian matrix, pairs of eigenvectors from <em>different eigenspaces</em> are also orthogonal.  If we dumped all these basis vectors into one big set it would be an orthonormal set.  We will build on these results and continue to see some more interesting properties in <xref ref="section-OD" acro="OD"/>.</p>
