@@ -96,6 +96,7 @@ Change: Locate Definition UTM and Definition LTM earlier
 Change: Locate Theorem PTMT in Section MM
 Change: Locate Theorem ITMT in Section MINM
 Change: Reorganize proof of Theorem EDELI using induction
+Change: Rename Theorem ZPZT as Theorem ZPZF
 Sage: doctesting, version 9.2
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
